# william_english_be

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  setup.cfg
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  utils.py
app/core/: __init__.py  config.py  database.py  security.py
app/crud/: __init__.py  base_crud.py  crud_deck.py  crud_note.py  crud_user.py
app/models/: __init__.py  base.py  card.py  deck.py  note.py  review_log.py  tag.py  user.py
app/schemas/: __init__.py  base_schema.py  card_schema.py  deck_schema.py  note_schema.py  token.py  user_schema.py
app/services/: __init__.py  auth_service.py  deck_service.py  note_service.py  srs_service.py  sync_service.py  user_service.py
app/tasks/: __init__.py  celery_app.py  email_tasks.py
migrations/: env.py
migrations/versions/: 10ba0e8d5adf_initial_migration.py
scripts/: init_db.py  initialize_app.py
src/william_english_be/: __init__.py  main.py
src/william_english_be/api/: deps.py
src/william_english_be/core/: config.py  security.py
src/william_english_be/db/: base.py
src/william_english_be/models/: __init__.py  user.py
src/william_english_be/schemas/: __init__.py  token.py  user.py
tests/: __init__.py  conftest.py
tests/api/v1/: test_auth_endpoints.py  test_health.py
tests/api_tests/: __init__.py
tests/api_tests/v1/: __init__.py  (+1 more)
tests/crud_tests/: __init__.py  test_crud_user.py
tests/service_tests/: __init__.py  test_auth_service.py  test_srs_service.py
tests/utils/: __init__.py  deck.py  user.py
(+10 files in other folders)
